--- a/src/Soenneker.Utils.Random.csproj
+++ b/src/Soenneker.Utils.Random.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+        <TargetFrameworks>net7.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <Platforms>AnyCPU</Platforms>
         <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup>
-        <Description>A tiny thread-safe random utility library</Description>
+        <Description>A thread-safe random utility library</Description>
         <Version Condition="'$(BUILD_VERSION)' == ''">1.0.0</Version>
         <Version Condition="'$(BUILD_VERSION)' != ''">$(BUILD_VERSION)</Version>
         <AssemblyName>Soenneker.Utils.Random</AssemblyName>
