Move to new structure

--- a/test/Soenneker.Utils.Random.Tests/Soenneker.Utils.Random.Tests.csproj
+++ b/test/Soenneker.Utils.Random.Tests/Soenneker.Utils.Random.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Soenneker.Utils.Random.csproj" />
+    <ProjectReference Include="..\..\src\Soenneker.Utils.Random.csproj" />
   </ItemGroup>
 
 </Project>
