--- a/test/Soenneker.Utils.Random.Tests/Soenneker.Utils.Random.Tests.csproj
+++ b/test/Soenneker.Utils.Random.Tests/Soenneker.Utils.Random.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="8.0.1" />
+    <PackageReference Include="AwesomeAssertions" Version="8.0.0-rc.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     
     <PackageReference Include="xunit.runner.visualstudio" Version="3.0.1">
