--- a/src/Soenneker.Utils.Random.csproj
+++ b/src/Soenneker.Utils.Random.csproj
@@ -37,4 +37,8 @@
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
+    </ItemGroup>
 </Project>
