--- a/src/Soenneker.Utils.Random.csproj
+++ b/src/Soenneker.Utils.Random.csproj
@@ -39,6 +39,6 @@
     </ItemGroup>
     
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.10" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-rc.2.25502.107" />
     </ItemGroup>
 </Project>
